--- a/css/common.css
+++ b/css/common.css
@@ -1,67 +1,274 @@
 @charset "utf-8";
 
 /*googleips 웹폰트 css 파일 불러오기*/
+
 @import url(https://fonts.googleapis.com/css?family=Galada|Nanum+Gothic|Nanum+Myeongjo);
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700;900&display=swap');
+
 /*font-family: 'Nanum Gothic', sans-serif;
 font-family: 'Noto Sans KR', sans-serif;
 font-family: 'Inconsolata', monospace;
 font-family: 'Nanum Myeongjo', serif;
 font-family: 'Galada', cursive; */
 
+
 /* 저장된 글꼴 파일 선언*/
+
+
 /* @font-face { font-family : font_gothic;    
                 src : url(../font/NanumGothic.ttf); }  */
+
+
 /* 웹사이트의 글꼴 파일 선언*/
+
+
 /* @font-face { font-family : font_gothic;    
                 src : url(http://uhbee.com/nanum.eot) ; }   */
 
+
 /*background: linear-gradient(to left, #F37335, #FDC830);*/
 
+* {
+    margin: 0;
+    padding: 0;
+}
 
-* {margin:0; padding:0;}
-html{font-size: 16px;}
-body{ font-size:16px;
-      color:#6f6f6f;
-      font-family: 'Inconsolata', monospace;}
-ul, ol, li{list-style-type:none}
-img, fieldset{border:none;vertical-align: middle}
-hr {clear:both;border:none}
-a {color:inherit;text-decoration:none}
-table{border-collapse:collapse}
-input, textarea {color:inherit;font-size:inherit;
-       font-family:inherit;
-       vertical-align: middle}
-button{outline:0}
-.inner{width: 1280px; margin: 0 auto;}
-.sound_only{display: block; text-indent: -99999999999999px; height: 0;}
+html {
+    font-size: 16px;
+}
+
+body {
+    font-size: 16px;
+    color: #6f6f6f;
+    font-family: 'Inconsolata', monospace;
+}
+
+ul,
+ol,
+li {
+    list-style-type: none
+}
+
+img,
+fieldset {
+    border: none;
+    vertical-align: middle
+}
+
+hr {
+    clear: both;
+    border: none
+}
+
+a {
+    color: inherit;
+    text-decoration: none
+}
+
+table {
+    border-collapse: collapse
+}
+
+input,
+textarea {
+    color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+    vertical-align: middle
+}
+
+button {
+    outline: 0
+}
+
+.inner {
+    width: 1280px;
+    margin: 0 auto;
+}
+
+.sound_only {
+    display: block;
+    text-indent: -99999999999999px;
+    height: 0;
+}
+
 
 /*wrap*/
-#wrap{width: 100%; height: 100%;
-      background: linear-gradient(to right, #fdc830, #f37335);}
+
+#wrap {
+    background: linear-gradient(to right, #fdc830, #f37335);
+}
+
+
 /*header*/
-#header{}
+
+#header {
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+#header #headerbox {
+    width: 100%;
+    position: relative;
+}
+
+
 /*logo*/
-#header #logo{width: 150px; height: 80px;
-              float: left; 
-              margin-top: 30px;
-              margin-left: 100px;}
-#header #logo img{width: 100%;}
+
+#header #logo {
+    width: 100px;
+    height: 50px;
+    position: absolute;
+    top: 20px;
+    left: 100px;
+}
+
+#header #logo img {
+    width: 100%;
+}
+
 
 /*nav*/
-#header #nav ul{float: right;
-                 margin-right: 100px;
-                 margin-top: 30px;}
-#header #nav ul li{float: left;
-                   color: #fff;
-                   font-size: 2rem;
-                   font-weight: 900;
-                   padding-left: 10px;
-                   padding-right: 10px;}
-#header #nav ul li a:after{content: ''; display: block;
-                           width:0; height: 5px;
-                           background-color: #fff;
-                           transition: 0.3s;}
-#header #nav ul li:hover a:after{width: 100%;}
 
+#header .gnb {
+    text-align: center;
+    padding-top: 20px;
+}
+
+#header .gnb {}
+
+#header .gnb li {
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 700;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#header .gnb li:hover a {
+    color: #666;
+}
+
+#header .gnb li.active a {
+    color: #666;
+}
+
+
+/*footer*/
+
+#footer h2 {
+    float: left;
+    font-size: 10rem;
+    font-weight: 900;
+    line-height: 1em;
+    color: #fff;
+    margin-left: 100px;
+}
+
+#footer ul {
+    float: left;
+    padding-top: 80px;
+    margin-left: 200px;
+    margin-bottom: 100px;
+}
+
+#footer ul li {
+    font-size: 3rem;
+    color: #fff;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+#footer ul li a {
+    font-size: 2rem;
+    border: 2px solid#fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+#footer ul li:last-child {
+    padding-top: 30px;
+}
+
+#footer ul li a:hover {
+    border: none;
+    background-color: #252326;
+}
+
+#footer .imgbox {
+    width: 500px;
+    float: right;
+    margin-top: 70px;
+    margin-right: 200px;
+    transition: 0.5s;
+    opacity: 0.8;
+    backface-visibility: visible;
+    transform-origin: 70% 50%;
+    transform: perspective(540px) rotateY(-13deg);
+}
+
+#footer .imgbox img {
+    width: 100%;
+}
+
+#footer .imgbox:hover {
+    backface-visibility: visible;
+    transform-origin: 70% 50%;
+    transform: perspective(500px) rotateY(0deg);
+    opacity: 1;
+    box-shadow: rgba(0, 0, 0, 0.15) 7px 7px 7px 0px;
+}
+
+#footer .arrow-down {
+    margin: 0 auto;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 130px;
+}
+
+#footer .arrow-down p {
+    color: #fff;
+    font-size: 2rem;
+    transform: translate(-15px, 30px);
+}
+
+#footer .arrow-down span {
+    display: block;
+    width: 2em;
+    height: 2em;
+    border-top: 2px solid #fff;
+    border-left: 2px solid #fff;
+    transform: rotate(45deg);
+    margin: -10px;
+    animation: animate-arrows 2s infinite;
+}
+
+.arrow-down span:nth-child(1) {
+    animation-delay: -0.2s;
+}
+
+.arrow-down span:nth-child(2) {
+    animation-delay: -0.4s;
+}
+
+.arrow-down span:nth-child(3) {
+    animation-delay: -0.6s;
+}
+
+@keyframes animate-arrows {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(1.5em, 1.5em);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-1.5em, -1.5em);
+    }
+}
